--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" href="assets/main.css" />
+  <link rel="stylesheet" href="components/main.css" />
   <script src="assets/main.js" type="module" defer></script>
 </head>
 <body>
