--- a/src/styles/props/props.scss
+++ b/src/styles/props/props.scss
@@ -1,8 +1,8 @@
 // components
-@use './styles/animations';
-@use './styles/borders';
-@use './styles/colors';
-@use './styles/easings';
-@use './styles/fonts';
-@use './styles/layers';
-@use './styles/sizes';
+@use './animations';
+@use './borders';
+@use './colors';
+@use './easings';
+@use './fonts';
+@use './layers';
+@use './sizes';
