--- a/src/styles/brand.scss
+++ b/src/styles/brand.scss
@@ -3,6 +3,7 @@
    * Colors
    */
   --color-brand: var(--violet-2);
+  --color-dark: var(--gray-8);
 
   /*
    * App level utils
@@ -42,9 +43,18 @@
   --font-lineheight-loose: 1.75;
 
   /*
+   * Borders
+   */
+  --border-base: 1px solid var(--gray-8);
+
+  /*
    * Base
    */
   font-size: 16px;
   line-height: 1.5;
+  font-family: Montserrat;
+  font-weight: 400;
+
+  font-family: 'SourceSans', sans-serif;
 }
 
