--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ const title = 'Ordkle';
 	<title>{title}</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="stylesheet" href={Astro.resolve('../styles/reset.scss')} />
+	<link rel="stylesheet" href={Astro.resolve('../styles/reset.css')} />
 	<link rel="stylesheet" href={Astro.resolve('../styles/props.scss')} />
 	<link rel="stylesheet" href={Astro.resolve('../styles/brand.scss')} />
 	<link rel="stylesheet" href={Astro.resolve('../styles/fonts.css')} />
