--- a/src/styles/props.scss
+++ b/src/styles/props.scss
@@ -4,6 +4,7 @@
 @use './props/colors';
 @use './props/easings';
 @use './props/fonts';
+@use './props/gradients';
 @use './props/layers';
 @use './props/shadows';
 @use './props/sizes';
