refactor(components): adjust accordion styles

--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -3,7 +3,6 @@ sg-accordion {
   --accordion-item-content-padding: var(--size-2) var(--app-gutter);
   --accordion-animation-easing: var(--ease-2);
   --accordion-animation-duration: .5s;
-  --accordion-summary-display: list-item;
   --accordion-item-border: var(--border-base);
 
   display: block;
@@ -14,12 +13,29 @@ sg-accordion {
   }
 
   summary {
-    display: var(--accordion-summary-display);
+    display: flex;
+    justify-content: space-between;
     padding: var(--accordion-item-header-padding);
+    cursor: pointer;
+
+    &:after {
+      content: "";
+      display: inline-block;
+      background-image: url('data:image/svg+xml, <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path></svg>');
+      width: 1.5em;
+      height: 1.5em;
+      text-align: center;
+
+      transition: transform .25s var(--ease-1);
+    }
 
     & ~ * {
       padding: var(--accordion-item-content-padding);
     }
+  }
+
+  details[open] summary:after {
+    transform: rotate(180deg);
   }
 
   summary::-webkit-details-marker,
