refactor(setup): rename site

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Header from '../components/header/Header.astro';
-const title = 'Ordkle';
+const title = 'Site Starter';
 ---
 <html lang="en">
 <head>
@@ -9,6 +9,7 @@ const title = 'Ordkle';
 	<title>{title}</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
 	<link rel="stylesheet" href={Astro.resolve('../styles/reset.css')} />
 	<link rel="stylesheet" href={Astro.resolve('../styles/props.scss')} />
 	<link rel="stylesheet" href={Astro.resolve('../styles/brand.scss')} />
