--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -4,7 +4,8 @@
   --button-secondary-bg: var(--orange-3);
   --button-secondary-color: var(--gray-9);
 
-  padding: var(--button-pad, .4em .75em);
+  padding: var(--button-pad, .45em .75em);
+  min-width: var(--button-min-width, 6em);
 
   background: var(--button-background, transparent);
   border: min(2px, .15em) solid currentColor;
@@ -25,15 +26,25 @@
   }
 
   &[size=big] {
-    font-size: 1.25em;
+    --button-pad: var(--button-big-pad, .45em .8em);
+    font-size: 1.15em;
   }
 
   &[size=small] {
-    font-size: .8em;
+    font-size: .9em;
+    --button-min-width: var(--button-small-min-width, 3em);
+    --button-pad: var(--button-small-pad, .6em .8em);
+  }
+
+  &[inverse]:not([theme]),
+  &[inverse][theme=''],
+  &[inverse][theme=default] {
+    --button-color: var(--gray-0);
+    --button-background: var(--gray-9);
   }
 
   &[inverse][theme=primary] {
-    --button-color: var(--color-brand);
+    --button-color: var(--color-brand, var(--gray-0));
     --button-background: unset;
   }
 
