--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,4 +1,4 @@
 // hide content by default until js is loaded.
-sg-sidebar:not([is-open],[should-animate]) > * {
+sg-sidebar:not([is-open],[animates]) > * {
   display: none;
 }
