--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import '@components/atoms/button/button.scss';
 ---
 <BaseLayout>
 
@@ -20,5 +21,6 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
   <section>
     hi :)
+    <button class="sg-button -theme-primary">click me!</button>
   </section>
 </BaseLayout>
