--- a/components/src/styles/props/animations.scss
+++ b/components/src/styles/props/animations.scss
@@ -1,4 +1,6 @@
 :root {
+  --animation-show: show .5s linear;
+  --animation-hide: hide .5s linear;
   --animation-fade-in: fade-in .5s var(--ease-3);
   --animation-fade-out: fade-out .5s var(--ease-3);
   --animation-scale-up: scale-up .5s var(--ease-3);
@@ -20,7 +22,15 @@
   --animation-bounce: bounce 2s var(--ease-squish-2) infinite;
   --animation-pulse: pulse 2s var(--ease-out-3) infinite;
 }
-
+@keyframes show {
+  0% { display: none !important; }
+  1% { display: block !important; }
+}
+@keyframes hide {
+  0% { display: block !important; }
+  99% { display: block !important; }
+  100% { display: none !important; }
+}
 @keyframes fade-in {
   to { opacity: 1 }
 }
@@ -56,6 +66,7 @@
 }
 @keyframes slide-in-left {
   from { transform: translateX(100%) }
+  to { transform: translateX(0) }
 }
 @keyframes shake-x {
   0%, 100% { transform: translateX(0%) }
