--- a/site/src/components/header/Header.astro
+++ b/site/src/components/header/Header.astro
@@ -1,6 +1,3 @@
----
-  // do we need stuff here even?
----
 <style lang="scss">
 header {
   display: flex;
@@ -20,5 +17,5 @@ header {
 </style>
 
 <header>
-  <span class="logo">?</span>
+  <span class="logo">Site starter</span>
 </header>
