site: use new astro beta syntax for scripts

--- a/site/src/pages/locations/index.astro
+++ b/site/src/pages/locations/index.astro
@@ -22,7 +22,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
     TODO: can this be done in the edge with netlify edge functions?
     </p>
 
-    <script hoist>
+    <script>
       import "../../components/locations/locations-list.element.ts";
     </script>
     <sg-locations-list>
